|Raunak+Ramu+Priyanshu| Added missing translations for kannada and marathi

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -3,9 +3,17 @@
 	"hrs validated in": "%hours ಗಂಟೆಗಳ %language ನಲ್ಲಿ ಮೌಲ್ಯೀಕರಿಸಲಾಗಿದೆ",
 	"hours": "ಗಂಟೆಗಳು",
 	"minutes": "ನಿಮಿಷಗಳು",
-	"seconds": "",
+	"seconds": "ಸೆಕಂಡುಗಳ",
 	"social sharing text with rank": "Http://boloindia.nplt.in  ನಲ್ಲಿ ಭಾರತಕ್ಕಾಗಿ ಮುಕ್ತ ಭಾಷಾ ಭಂಡಾರವನ್ನು ನಿರ್ಮಿಸಲು ನಾನು ಕೊಡುಗೆಯನ್ನು ನೀಡಿದ್ದೇನೆ. ನೀವು ಮತ್ತು ನಾನು ನಮ್ಮ ಧ್ವನಿಗಳನ್ನು ದಾನ ಮಾಡುವ ಮೂಲಕ ಯಂತ್ರಗಳಿಗೆ ನಮ್ಮ ಭಾಷೆಯನ್ನು ಕಲಿಯಲು ಸಹಾಯ ಮಾಡುವಲ್ಲಿ   ಒಂದು ವ್ಯತ್ಯಾಸವನ್ನು ಮಾಡಬಹುದು. ಬೊಲೊ ಇಂಡಿಯಾದಲ್ಲಿ ನಮ್ಮ %language ಭಾಷೆ %rank ಸ್ಥಾನದಲ್ಲಿದೆ. ನಿಮ್ಮ ಚಿಕ್ಕ ಕೊಡುಗೆಯನ್ನು ನೀಡಿ ಮತ್ತು ಭಾಷೆಯನ್ನು ಸಮೃದ್ಧಗೊಳಿಸುವಿರಾ? ",
 	"social sharing text without rank": "Http://boloindia.nplt.in  ನಲ್ಲಿ ಭಾರತಕ್ಕಾಗಿ ಮುಕ್ತ ಭಾಷಾ ಭಂಡಾರವನ್ನು ನಿರ್ಮಿಸಲು ನಾನು ಕೊಡುಗೆಯನ್ನು ನೀಡಿದ್ದೇನೆ. ನೀವು ಮತ್ತು ನಾನು ನಮ್ಮ ಧ್ವನಿಗಳನ್ನು ದಾನ ಮಾಡುವ ಮೂಲಕ ಯಂತ್ರಗಳಿಗೆ ನಮ್ಮ ಭಾಷೆಯನ್ನು ಕಲಿಯಲು ಸಹಾಯ ಮಾಡುವಲ್ಲಿ   ಒಂದು ವ್ಯತ್ಯಾಸವನ್ನು ಮಾಡಬಹುದು. ನಿಮ್ಮ ಚಿಕ್ಕ ಕೊಡುಗೆಯನ್ನು ನೀಡಿ ಮತ್ತು ಭಾಷೆಯನ್ನು ಸಮೃದ್ಧಗೊಳಿಸುವಿರಾ?",
+	"Recording for 5 seconds": "5 ಸೆಕಂಡುಗಳ ರೆಕಾರ್ಡಿಂಗ್",
+	"Recording for 4 seconds": "4 ಸೆಕಂಡುಗಳ ರೆಕಾರ್ಡಿಂಗ್",
+	"Recording for 3 seconds": "3 ಸೆಕಂಡುಗಳ ರೆಕಾರ್ಡಿಂಗ್",
+	"Recording for 2 seconds": "2 ಸೆಕಂಡುಗಳ ರೆಕಾರ್ಡಿಂಗ್",
+	"Recording for 1 seconds": "1 ಸೆಕಂಡುಗಳ ರೆಕಾರ್ಡಿಂಗ್",
+	"Playingback Audio": "ಆಡಿಯೋವನ್ನು ಮತ್ತೆ ಪ್ಲೇ ಮಾಡಲಾಗುತ್ತಿದೆ",
+	"Playing": "ಚಲಾಯಿಸುವುದು",
+	"Congratulations!!! You have completed this batch of sentences": "ಧನ್ಯವಾದಗಳು!!! ನೀವು ವಾಕ್ಯಗಳ ಈ ಬ್ಯಾಚ್ ಅನ್ನು ಪೂರ್ಣಗೊಳಿಸಿದ್ದೀರಿ",
 	"Language": "ಕನ್ನಡ",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "ನಮ್ಮನ್ನು ಕುರಿತು",
@@ -35,8 +43,8 @@
 	"Not You? Change User": "ನೀವಲ್ಲವೇ?  ಬಳಕೆದಾರರನ್ನು ಬದಲಾಯಿಸಿ",
 	"Username": "ಬಳಕೆದಾರರ ಹೆಸರು",
 	"Enter preferred username": "ಆದ್ಯತೆಯ ಬಳಕೆದಾರರ ಹೆಸರನ್ನು ನಮೂದಿಸಿ",
-	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Username cannot be more than 12 characters": "ಬಳಕೆದಾರ ಹೆಸರು 12 ಕ್ಕಿಂತ ಹೆಚ್ಚು ಅಕ್ಷರಗಳನ್ನು ಹೊಂದಿರಕೂಡದು",
+	"Please don't use email or mobile number as user name": "ಬಳಕೆದಾರ ಹೆಸರು ಇಮೇಲ್ ವಿಳಾಸ ಅಥವಾ ಮೊಬೈಲ್ ಸಂಖ್ಯೆಯಾಗಿರಕೂಡದು",
 	"Mother Tongue": "ಮಾತೃಭಾಷೆ",
 	"Select Mother Tongue": "ಮಾತೃಭಾಷೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ",
 	"Age Group": "ವಯೋಮಾನ",
@@ -61,8 +69,8 @@
 	"Contribute Now": "ಈಗ ಕೊಡುಗೆ ನೀಡಿ",
 	"hours validated": "ಮೌಲ್ಯೀಕರಿಸಿದ ಒಟ್ಟು ಸಮಯ",
 	"Progress Chart": "ಪ್ರಗತಿಯ ಚಾರ್ಟ್",
-	"Monthly": "ತಿಂಗಳಿಗಮ್ಮೆ / ಮಾಸಿಕ",
-	"Quarterly": "ಮೂರು ತಿಂಗಳಿಗೊಮ್ಮೆ / ತ್ರೈಮಾಸಿಕ",
+	"Monthly": "ಮಾಸಿಕ",
+	"Quarterly": "ತ್ರೈಮಾಸಿಕ",
 	"Gender Distribution": "ಲಿಂಗ ವಿತರಣೆ",
 	"State Wise distribution": "ರಾಜ್ಯವಾರು ವಿತರಣೆ",
 	"Age Group Distribution": "ವಯೋಮಾನ ವಿತರಣೆ",
@@ -74,8 +82,8 @@
 	"Thank You for your valuable feedback": "ನಿಮ್ಮ ಅಮೂಲ್ಯವಾದ ಪ್ರತಿಕ್ರಿಯೆಗಾಗಿ ಧನ್ಯವಾದಗಳು",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ಬೋಲೋ ಇಂಡಿಯಾವನ್ನು ಸಮರ್ಪಕವನ್ನಾಗಿಸಲು ನಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ, ಪ್ರತಿಕ್ರಿಯೆ ನೀಡಲು ನೀವು ನಿಮ್ಮ ಸಮಯವನ್ನು ವ್ಯಯಿಸಿದುದನ್ನು ನಾವು ಪ್ರಶಂಸಿಸುತ್ತೇವೆ.",
 	"Back to Home": "ಹಿಂತಿರುಗಿ",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಪರಿಗಣನೆಯ ಮಾದರಿಗಳ ಅಭಿವೃದ್ಧಿಗೆ, ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿಗಳ ಭಂಡಾರದ ಅವಶ್ಯಕತೆಯಿದೆ. ಭಾರತೀಯ ಧ್ವನಿಗಳ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ತಲುಪಲು ಮತ್ತು ಕೊಡುಗೆ ನೀಡಲು ವಾಕ್ಯಾಂಶ್ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸಿದ್ದಾರೆ.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ಮುಕ್ತ ಮೂಲ ಕಾರ್ಯತಂತ್ರವು ವಿವಿಧ ಭಾಷಾ ಸಮುದಾಯಗಳು, ವ್ಯಕ್ತಿಗಳು ಮತ್ತು ತಂತ್ರಜ್ಞರಿಗೆ, ಅವರ ಭಾಷೆಯ ಬಗ್ಗೆ ಉತ್ಸಾಹಭರಿತವಾಗಿರುವ, ಭಾಷಣ ಮಾನ್ಯತ ಅನ್ವಕೆಗಳನ್ನು ಅಭಿವೃದ್ಧಿಪಡಿಸಲು ಮತ್ತು ಸಮುದಾಯದ ಒಳಿತಿಗಾಗಿ ವಿವಿಧ ವಿಚಾರ ವ್ಯಾಪ್ತಿಗಳಲ್ಲಿ ಸಂಯೋಜಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ",
 	"India is a land of many languages, our digital strategy must reflect it.": "ನಮ್ಮ ಬಹುಭಾಷಾ ಡಿಎನ್‌ಎ ಇನ್ನೂ ಡಿಜಿಟಲ್ ಮೊದಲ ತಂತ್ರದಲ್ಲಿ ಕಾಣೆಯಾಗಿದ ಅಂಶವಾಗಿದೆ",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "ಭಾರತವು ವಿಶಾಲವಾದ ಬಹುಭಾಷಾ ದೇಶವಾಗಿರುವುದರಿಂದ, ಭಾರತದ ಜನಸಂಖ್ಯೆಯ 90% ಜನರು ತಮ್ಮ ಶೈಕ್ಷಣಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ಡಿಜಿಟಲ್ ಚಟುವಟಿಕೆಗಳನ್ನು ನಡೆಸಲು ಪ್ರಾದೇಶಿಕ ಭಾಷೆಗಳನ್ನು ಅವಲಂಬಿಸಿದ್ದಾರೆ.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ಅಂತರ್ಜಾಲ ಬಳಕೆದಾರರ ಪ್ರಮಾಣವು ಹೆಚ್ಚಾಗುತ್ತಿರುವುದರಿಂದ  ಮತ್ತು ಆರ್ಥಿಕ, ಶೈಕ್ಷಣಿಕ ಮತ್ತು ಆರ್ಥಿಕ ಚಟುವಟಿಕೆಗಳಿಗೆ ಡಿಜಿಟಲ್ ವೇದಿಕೆಗಳನ್ನು ಪ್ರವೇಶಿಸುವ ಬೇಡಿಕೆಯಿರುವುದರಿಂದ, ಮೊದಲು ಭಾರತೀಯ ಭಾಷೆಗಳನ್ನು ವಿವೇಚಿಸಲು ಪ್ರಾರಂಭಿಸುವ ಅವಶ್ಯಕತೆಯಿದೆ.",
@@ -133,7 +141,7 @@
 	"Thank you for contributing!": "ಕೊಡುಗೆ ನೀಡಿದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
 	"You are a champion": "ನೀವೊಬ್ಬ ಚ್ಯಾಂಪಿಯನ್",
 	"WooHoo!! You took the first important step": "ಓಹೋ!!  ನೀವು ಮಹತ್ವದ ಮೊದಲ ಹೆಜ್ಜೆಯನ್ನು ಎತ್ತಿದ್ದೀರಿ",
-	"recordings contributed": "recordings contributed",
+	"recordings contributed": "ರೆಕಾರ್ಡಿಂಗ್ ಗಳನ್ನು ಸಲ್ಲಿಸಲಾಗಿದೆ",
 	"Share it with your friends and family": "ಇದನ್ನು ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಕುಟುಂಬದವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಿ",
 	"Did you know?": "ನಿಮಗೆ ಗೊತ್ತಿದೆಯೇ?",
 	"Most Contributed - <span id=\"languageId\"></span>": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ - <span id=\"languageId\"></span>",
@@ -144,13 +152,13 @@
 	"Thank you for your enthusiasm to validate the recordings.": "ರೆಕಾರ್ಡಿಂಗ್ ಗಳ ಮೌಲ್ಯೀಕರಣದಲ್ಲಿಯ ನಿಮ್ಮ ಉತ್ಸಾಹಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು",
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "<span id=\"spn-validation-language\"></span> ಭಾಷೆಯಲ್ಲಿ ಯಾವುದೇ ಮಾಹಿತಿಯನ್ನು ನಾವು ಹೊಂದಿಲ್ಲ. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
 	"Would you also like to contribute your voice?": "ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
-	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span>ನಲ್ಲಿ ಕೊಡುಗೆ ನೀಡಲು ಪ್ರಾರಂಭಿಸಿ",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> ನಲ್ಲಿ ಕೊಡುಗೆ ನೀಡಲು ಪ್ರಾರಂಭಿಸಿ",
 	"Thank you for validating!": "ಮೌಲ್ಯೀಕರಿಸಿದ್ದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್ ಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಿದ್ದಕ್ಕಾಗಿ ನಿಮಗೆ ಧನ್ಯವಾದಗಳು",
 	"Validate More": "ಮತ್ತಷ್ಟು ಮೌಲ್ಯೀಕರಿಸಿ",
 	"Incorrect": "ತಪ್ಪು",
-	"Play": "ಮಾಡಿ",
-	"Replay": "ಮಾಡಿ",
+	"Play": "ಪ್ಲೇ (ಚಾಲನೆ) ಮಾಡಿ",
+	"Replay": "ರಿ-ಪ್ಲೇ (ಮರು-ಚಾಲನೆ) ಮಾಡಿ",
 	"Pause": "ವಿರಾಮ",
 	"Correct": "ಸರಿ",
 	"Skip": "ತ್ಯಜಿಸಿ",
@@ -160,5 +168,5 @@
 	"Match the voice to the text <b>accurately</b>": "ಧ್ವನಿಯನ್ನು ಪಠ್ಯಕ್ಕೆ ನಿಖರವಾಗಿ ಹೊಂದಿಸಿ",
 	"If you are unsure of the match, skip the particular voice sample": "ಹೊಂದಾಣಿಕೆಯ ಬಗ್ಗೆ ನಿಮಗೆ ಖಚಿತವಿಲ್ಲದಿದ್ದರೆ, ನಿರ್ದಿಷ್ಟ ಧ್ವನಿ ಮಾದರಿಯನ್ನು ಬಿಟ್ಟುಬಿಡಿ",
 	"START": "ಪ್ರಾರಂಭಿಸು",
-	"Most Contributed": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ "
+	"Most Contributed": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ"
 }
