--- a/locales/mr.json
+++ b/locales/mr.json
@@ -3,7 +3,7 @@
 	"hrs validated in": "%language मध्ये %hours तासांचे प्रमाणीकरण केले गेले.",
 	"hours": "तास",
 	"minutes": "मिनिट",
-	"seconds": "",
+	"seconds": "सेकंद",
 	"social sharing text with rank": "मी भारतासाठी ओपन भाषा संग्रह बनविण्यासाठी https://boloindia.nplt.in वर माझे योगदान दिले आहे. तुम्ही आणि मी आपल्या आवाजांचे योगदान देऊन ह्या उपक्रमात खूप मदत करू शकतो, ज्यामुळे मशीनला आपण जे काही बोलत आहोत ते शिक्षण्यासाठी मदत मिळत आहे. बोला भारत वर आपल्या %language भाषाचा नंबर %rank आहे. आपली भाषा सशक्त बनविण्यासाठी तुम्ही तुमचे योगदान देऊ इच्छिता?",
 	"social sharing text without rank": "मी भारतासाठी ओपन भाषा संग्रह बनविण्यासाठी https://boloindia.nplt.in वर माझे योगदान दिले आहे. तुम्ही आणि मी आपल्या आवाजांचे योगदान देऊन ह्या उपक्रमात खूप मदत करू शकतो, ज्यामुळे मशीनला आपण जे काही बोलत आहोत ते शिक्षण्यासाठी मदत मिळत आहे. आपली भाषा सशक्त बनविण्यासाठी तुम्ही तुमचे योगदान देऊ इच्छिता?",
 	"Recording for 5 seconds": "5 सेकंदसाठी रेकॉर्ड केले जात आहे",
@@ -11,6 +11,8 @@
 	"Recording for 3 seconds": "3 सेकंदसाठी रेकॉर्ड केले जात आहे",
 	"Recording for 2 seconds": "2 सेकंदसाठी रेकॉर्ड केले जात आहे",
 	"Recording for 1 seconds": "1 सेकंदसाठी रेकॉर्ड केले जात आहे",
+	"Playingback Audio": "ऑडिओ प्ले करत आहे",
+	"Playing": "प्ले केले जात आहे",
 	"Congratulations!!! You have completed this batch of sentences": "अभिनंदन!!! आपण वाक्यांच्या ह्या बॅचला पूर्ण केले आहे",
 	"Language": "मराठी",
 	"Speech Recognition Models": "Speech Recognition Models",
@@ -41,8 +43,8 @@
 	"Not You? Change User": "तुम्ही नाही? वापरकर्ता बदला",
 	"Username": "वापरकर्ता नाव",
 	"Enter preferred username": "पसंतीचे वापरकर्ता नाव प्रविष्ट करा",
-	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Username cannot be more than 12 characters": "वापरकर्ता नाव हे १२ वर्णांपेक्षा जास्त असू शकत नाही",
+	"Please don't use email or mobile number as user name": "वापरकर्ता नाव हे कोणताही ईमेल पत्ता किंवा मोबाइल नंबर असू शकत नाही",
 	"Mother Tongue": "मातृभाषा",
 	"Select Mother Tongue": "मातृभाषा निवडा",
 	"Age Group": "वयोगट",
@@ -114,7 +116,7 @@
 	"Please specify the reason (Optional)": "कृपया कारण निर्दिष्ट करा (पर्यायी)",
 	"SUBMIT": "सबमिट करा",
 	"Thank You": "धन्यवाद",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपला अभिप्राय आम्हाला \"बोला भारत\" ला तुमच्यासाठी उपयोगी बनविण्यासाठी मदत करतो, तुम्ही तुमच्या वेळेत वेळ काढून आम्हाला आपला अभिप्राय दिल्याबद्दल आम्ही तुमचे कौतुक करतो.",
 	"Error!!!": "त्रुटी!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "आपल्या विनंतीवर प्रक्रिया करताना एक अनपेक्षित त्रुटि आली आहे. कृपया थोड्या वेळाने पुन्हा प्रयत्न करा.",
 	"Close": "बंद करा",
