| Priyanshu | added additional content for Hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -6,7 +6,7 @@
 	"Say": "बोलिये",
 	"Contribute Your Voice": "अपनी आवाज़ का योगदान दें",
 	"Contribute your voice to create an open data repository of Indian languages": "भारतीय भाषाओं के विशाल डाटा संग्रह के लिए अपनी आवाज़ का योगदान दें",
-	"Listen": "पुष्टि करें",
+	"Listen": "सुनें (पुष्टि करें)",
 	"Verify What They Say": "प्रमाणित करिए, क्या कहा जा रहा है",
 	"Help us by validating the voice samples that others have contributed": "दूसरों द्वारा दिए गए आवाज़ों के नमूनों को प्रमाणित करने में हमारी मदद करें",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "वाक्यांश : भारतीय भाषाओं के लिए एक जन-संकुल स्रोत पहल",
@@ -75,7 +75,7 @@
 	"An unexpected error occured while processing your request. Please try after some time.": "आपके अनुरोध पर कार्रवाई करते समय एक अनपेक्षित गड़बड़ी हुई। कृपया कुछ समय बाद फिर से कोशिश करें।",
 	"Close": "बंद करें",
 	"Thank you for contributing!": "योगदान देने के लिए आपका धन्यवाद!",
-	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\"> सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
 	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "आपकी आवाज़ का 30 से 45 मिनट के योगदान से वाक्यांश विविध  आवाज़ों के विशाल आधार-सामाग्री संग्रह बना सकता है।",
 	"We know you can do more!": "हम जानते हैं कि आप और भी अधिक कर सकते हैं!",
@@ -183,7 +183,7 @@
 	"Thank You": "बहुत बहुत शुक्रिया",
 	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "आपकी प्रतिक्रिया हमें \"बोलो इंडिया\" को प्रासंगिक बनाए रखने में मदद करती है, प्रतिक्रिया छोड़ने के लिए हम आपकी सराहना करते हैं।",
 	"Speak": "बोलें",
-	"Validate What They Say": "जो लिखा है क्या वही कहा जा रहा है ?",
+	"Validate What They Say": "जो लिखा है क्या वही कहा जा रहा है",
 	"Help us by validating the recordings that others have contributed": "दूसरे लोगों ने जो आवाज़ के नमूनों का योगदान किया है उनकी पुष्टि करने में हमारी मदद करें",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "बोलो इंडिया: भारतीय भाषाओं के लिए एक क्राउडसोर्सिंग पहल ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "भारतीय भाषाओं में बोली पहचान के क्षेत्र में भारत को आत्मनिर्भर बनने की ज़रूरत है। इसलिए, हम कई प्रकार की भारतीय आवाज़ों का एक ओपन डेटा रिपॉज़िटरी बनाना चाहते हैं। इस मकसद को पूरा करने के लिए, \"बोलो इंडिया\" आपको अपनी आवाज़ का योगदान देने के लिए आमंत्रित करता है।",
@@ -212,20 +212,22 @@
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> के लिए डेटा रिकॉर्ड किया गया",
 	"Congratulations!!! You have completed this batch of sentences": "बधाई हो! आपने अपनी आवाज़ में एक बैच का योगदान किया है!",
 	"Please type here...": "कृपया यहाँ टाइप करें...",
-	"Failed to submit the feedback. Please try again.": "प्रतिक्रिया सबमिट करने में विफल। कृपया पुन: प्रयास करें।",
+	"Failed to submit the feedback. Please try again.": "फ़ीडबैक सबमिट नहीं हो पाया। कृपया फिर से कोशिश करें।",
 	"Thank You for your valuable feedback": "आपके बहूमूल्य फ़ीडबैक के लिए धन्यवाद",
 	"Back to Home": "होम पेज पर वापस जाएं",
 	"Subject": "विषय",
 	"Description": "विवरण",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "भारतीय भाषाओं में बोली पहचान के क्षेत्र में भारत को आत्मनिर्भर बनने की ज़रूरत है। इसलिए, हम कई प्रकार की भारतीय आवाज़ों का एक ओपन डेटा रिपॉज़िटरी बनाना चाहते हैं। इस मकसद को पूरा करने के लिए, \"बोलो इंडिया\" आपको अपनी आवाज़ का योगदान देने के लिए आमंत्रित करता है।",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "इस ओपन डेटा का इस्तेमाल भाषा और टेक्नोलॉजी में दिलचस्पी रखने वाले सभी लोग विश्व स्तरीय बोली पहचान ऐप्लिकेशन तैयार करने में कर सकते हैं। ",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "भारत को भारतीय भाषाओं में बोली पहचान के क्षेत्र में आत्मनिर्भर बनना ज़रूरी है। इसलिए, हम कई भारतीय आवाज़ों की एक ओपन डेटा रिपॉज़िटरी बनाना चाहते हैं। यह नेशनल लैंग्वेज ट्रांसलेशन मिशन (एनटीएलएम) के तहत, माइटी, भारत सरकार की एक कोशिश है। इस कोशिश को प्रो-बोनो आधार पर एकस्टेप फाउंडेशन का समर्थन हासिल है और यह कई अन्य ओपन सोर्स फ्रेमवर्क के साथ-साथ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> में अपने खुद के ओपन सोर्स वर्क का लाभ उठाता है",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "बोलो इंडिया आपको इस काम में अपनी इच्छा से अपनी आवाज़ का योगदान करने के लिए आमंत्रित करता है। आपके सभी योगदानों को ऑटोमैटिक तरीके से प्रोसेस करके एक उपयोगी फ़ॉर्मेट में ओपन डेटा के रूप में समुदाय को उपलब्ध कराया जाता है। इस तरह के डेटा का इस्तेमाल भाषा और टेक्नोलॉजी में दिलचस्पी रखने वालों द्वारा विश्व स्तरीय बोली पहचान ऐप्लिकेशन तैयार करने में किया जा सकता है।\"",
 	"social sharing text with rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। \"बोलो इंडिया\" पर हमारी %language भाषा का रैंक %rank है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
 	"social sharing text without rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
-	"Please speak clearly": "कृपया स्पष्ट बोलें",
-	"Low/No Background Noise": "Low/No Background Noise",
-	"Background Noise Detected": "बैकग्राउंड में शोर सुनाई दिया",
+	"Select the language for voluntary contribution": "अपना योगदान देने के लिए भाषा चुनें",
+	"Please speak clearly": "कृपया साफ़-साफ़ बोलें",
+	"Low/No Background Noise": "आस-पास में शोर कम/बिल्कुल नहीं है",
+	"Background Noise Detected": "बैकग्राउंड में शोर कम/बिल्कुल नहीं है",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
 	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं"
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
+	"National Language Translation Mission": "नेशनल लैंग्वेज ट्रांसलेशन मिशन",
+	"Download": "डाउनलोड करें"
 }
