| Priyanshu | added additional content for Telugu

--- a/locales/te.json
+++ b/locales/te.json
@@ -20,7 +20,7 @@
 	"Language": "తెలుగు",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "మా గురించి",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Select the language for voluntary contribution": "స్వచ్ఛంద సహకారం కోసం భాషను ఎంచుకోండి",
 	"Show All": "అన్నీ చూపండి",
 	"Speak": "మాట్లాడండి",
 	"Contribute Your Voice": "మీ ఓయిస్‌ ఇచ్చి సహకరించండి",
@@ -75,8 +75,8 @@
 	"Get started by clicking on <b>Record</b> button": "<b>రికార్డ్</b> బటన్ పై క్లిక్ చేయడం ద్వారా ప్రారంభించండి",
 	"Report": "రిపోర్టు చేయి",
 	"Test your Microphone and Speakers": "మీ మైక్రోఫోన్ మరియు స్పీకర్లను పరీక్షించండి",
-	"Please speak clearly": "Please speak clearly",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Please speak clearly": "దయచేసి స్పష్టంగా మాట్లాడండి",
+	"Low/No Background Noise": "తక్కువ శబ్దాలు/నేపథ్య శబ్దాలూ లేవు",
 	"Background Noise Detected": "నేపథ్య శబ్దం కనుగొనబడింది",
 	"Let's get started!": "ప్రారంభిద్దాం!",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> సెకన్ల తర్వాత రికార్డింగ్ దానికదే ఆగిపోతుంది",
@@ -141,8 +141,8 @@
 	"Description": "వివరణ",
 	"Please type here...": "దయచేసి ఇక్కడ టైప్ చేయండి...",
 	"Failed to submit the feedback. Please try again.": "అభిప్రాయాన్ని సమర్పించడంలో విఫలమైంది. దయచేసి మళ్ళీ ప్రయత్నించండి.",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "భారతీయ భాషలలో స్పీచ్ రికగ్నేషన్ విషయంలో భారతదేశం ఆత్మనిర్భరంగా ఉండాలి. అందువల్ల, మేము అనేక భారతీయ భాషల్లో ఓపెన్ డేటా రిపోజిటరీని సృష్టించాలనుకుంటున్నాము. ఈ కారణం కోసం మీ స్వరాన్ని స్వచ్ఛందంగా అందించమని బోలో ఇండియా మిమ్మల్ని ఆహ్వానిస్తోంది.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ఈ ఓపెన్ డేటాను భాషా ఔత్సాహికులు మరియు సాంకేతిక నిపుణులందరూ ప్రపంచ స్థాయి స్పీచ్ రికగ్నిషన్ అప్లికేషన్లను అభివృద్ధి చేయడానికి ఉపయోగించవచ్చు.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "భారతీయ భాషలలో స్పీచ్ రికగ్నేషన్ విషయంలో భారతదేశం ఆత్మనిర్భరంగా ఉండాలి. అందువల్ల, మేము ఎంతోమంది భారతీయుల కంఠస్వరాలతో ఒక ఓపెన్ డేటా రిపోజిటరీని రూపొందించాలనుకుంటున్నాము. ఇది జాతీయ భాషా అనువాద మిషన్ (ఎన్\u200Cఎల్\u200Cటీఎం) లో భాగంగా భారత ప్రభుత్వం MeitY చేస్తున్న ప్రయత్నం. ఈ ప్రయత్నానికి ప్రో-బోనో ప్రాతిపదికన ఏక్\u200Cస్టెప్ ఫౌండేషన్ మద్దతునిస్తుంది, అలాగే దాని ఓపెన్ సోర్స్ వర్క్ ని <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> తో పాటు పలు ఇతర ఓపెన్ సోర్స్ ఫ్రేమ్\u200Cవర్క్ లతో ప్రభావితం చేస్తుంది.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "బోలో ఇండియా ఈ ప్రయోజనం కోసం స్వచ్ఛందంగా మరియు మీ గొంతును అందించమని మిమ్మల్ని ఆహ్వానిస్తుంది. మీ అన్ని రచనలు ఆటోమేటిక్\u200Cగా ప్రాసెస్ చేయబడి సమాజానికి తిరిగి ఉపయోగకరమైన పద్ధతిలో ఓపెన్ డేటాగా అందుబాటులో ఉంటాయి. ఇటువంటి డేటాను అన్ని భాషా ఔత్సాహికులు మరియు సాంకేతిక నిపుణులు ప్రపంచ స్థాయి ప్రమాణాలకి చెందిన స్పీచ్ రికగ్నిషన్ అప్లికేషన్లను అభివృద్ధి చేయడానికి ఉపయోగించవచ్చు.\"",
 	"India is a land of many languages, our digital strategy must reflect it.": "Iభారతదేశం అనేక భాషలు మాట్లాడబడే దేశం, మన డిజిటల్ వ్యూహం దానిని ప్రతిబింబించాలి.",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "భారతదేశ జనాభాలో 90% మంది తమ రోజువారీ కార్యకలాపాలను నిర్వహించడానికి ప్రాంతీయ భాషలను ఉపయోగిస్తున్నారు.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ఆర్థిక, విద్యా మరియు సామాజిక కార్యకలాపాల కోసం ఎక్కువ మంది ప్రజలు డిజిటల్ ప్లాట్‌ఫారమ్‌లను ఉపయోగిస్తున్నందున, డిజిటల్ ప్లాట్‌ఫారమ్‌లు భారతీయ భాషల్లో సజావుగా పనిచేయాలి.",
@@ -173,6 +173,9 @@
 	"State Wise distribution": "రాష్ట్రాల వారీగా పంపిణీ",
 	"Age Group Distribution": "వయో సమూహం డిస్ట్రిబ్యూషన్",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "మీ అభిప్రాయం బోలో ఇండియాను సందర్భోచితంగా ఉంచడానికి మాకు సహాయపడుతుంది, మీరు అభిప్రాయాన్ని తెలియజేయడానికి సమయం కేటాయిస్తే మేము మిమ్మల్ని అభినందిస్తాము.",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "మీ అభిప్రాయం బోలో ఇండియాను సందర్భోచితంగా ఉంచడానికి మాకు సహాయపడుతుంది, మీరు అభిప్రాయాన్ని తెలియజేయడానికి సమయం కేటాయిస్తే మేము మిమ్మల్ని అభినందిస్తాము",
-	"Most Contributed - <span id=\"languageId\"></span>": "ఎక్కువ సహకారం అందించబడింది - <span id=\"languageId\"></span>"
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "మీ అభిప్రాయం బోలో ఇండియాను సందర్భోచితంగా ఉంచడానికి మాకు సహాయపడుతుంది, మీరు అభిప్రాయాన్ని తెలియజేయడానికి సమయం కేటాయిస్తే మేము మిమ్మల్ని అభినందిస్తాము.",
+	"Most Contributed - <span id=\"languageId\"></span>": "ఎక్కువ సహకారం అందించబడింది - <span id=\"languageId\"></span>",
+	"National Language Translation Mission": "జాతీయ భాషా అనువాద మిషన్",
+	"Download": "డౌన్\u200Cలోడ్ చేయండి",
+	"Badge ID": "బ్యాడ్జ్ ID"
 }
