--- a/locales/gu.json
+++ b/locales/gu.json
@@ -20,13 +20,13 @@
 	"Language": "ગુજરાતી",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "અમારા વિશે",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Select the language for voluntary contribution": "સ્વૈચ્છિક યોગદાન માટે ભાષા પસંદ કરો",
 	"Show All": "તમામ બતાવો",
 	"Speak": "બોલો",
 	"Contribute Your Voice": "તમારા અવાજનો ફાળો આપો",
 	"Contribute your voice to create an open data repository of Indian languages": "ભારતીય ભાષાઓમાં ઓપન ડેટાનો ભંડાર બનાવવા માટે તમારો અવાજ આપો",
-	"Listen": "સાંભળો",
-	"Validate What They Say": "તેઓ જે કહે છે એને માન્ય કરો",
+	"Listen": "ખાતરી કરો",
+	"Validate What They Say": "તે શું કહે છે તેને પ્રમાણિત કરો",
 	"Help us by validating the recordings that others have contributed": "બીજાઓએ ફાળો આપેલાને માન્ય કરવા માટે અમને મદદ કરો",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "બોલો ઇન્ડિયા: ભારતીય ભાષાઓ માટે એક ક્રાઉડસોર્સિંગની પહેલ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ભારતીય ભાષાઓમાં અવાજ પારખવાના ક્ષેત્રમાં ભારતને આત્મનિર્ભર બનવાની જરૂર છે. આથી, અમે સંખ્યાબંધ ભારતીય અવાજોનો ઓપન ડેટા ભંડાર બનાવવા માંગીએ છીએ. બોલો ઇન્ડિયા આપને આ હેતુસર તમારા અવાજનો સ્વેચ્છાએ ફાળો આપવા માટે આમંત્રણ આપે છે.",
@@ -86,7 +86,7 @@
 	"Report": "રિપોર્ટ",
 	"Test your Microphone and Speakers": "તમારું માઇક્રોફોન અને સ્પીકર્સ તપાસો",
 	"Please speak clearly": "Please speak clearly",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Low/No Background Noise": "પૃષ્ઠભૂમિમાં નિમ્ન અવાજ/બિલકુલ અવાજ નહીં",
 	"Background Noise Detected": "પાછળ કોઇ અવાજ મળી આવ્યો છે",
 	"Let's get started!": "ચાલો શરૂ કરીએ!",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> સેકન્ડ પછી રેકોર્ડિંગ આપોઆપ અટકી જશે",
@@ -149,13 +149,13 @@
 	"START": "START",
 	"Subject": "વિષય",
 	"Description": "વર્ણન",
-	"Please type here...": "કૃપા કરી અહીં લખો...",
-	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Please type here...": "કૃપા કરીને અહીં ટાઇપ કરો...",
+	"Failed to submit the feedback. Please try again.": "પ્રતિભાવ દાખલ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયત્ન કરો.",
 	"Thank You for your valuable feedback": "આપના મૂલ્યવાન પ્રતિભાવ બદલ આભાર",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "આપનો પ્રતિભાવ બોલો ઇન્ડિયાને સંબંધિત રાખવામાં મદદ કરે છે, આપે પ્રતિભાવ આપવા સમય ફાળવ્યો તે બદલ અમે આપની પ્રશંસા કરીએ છીએ.",
 	"Back to Home": "પાછા હોમ પર",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ભારતીય ભાષાઓમાં અવાજ પારખવાના ક્ષેત્રમાં ભારતને આત્મનિર્ભર બનવાની જરૂર છે. આથી, અમે સંખ્યાબંધ ભારતીય અવાજોનો ઓપન ડેટા ભંડાર બનાવવા માંગીએ છીએ. બોલો ઇન્ડિયા આપને આ હેતુસર તમારા અવાજનો સ્વેચ્છાએ ફાળો આપવા માટે આમંત્રણ આપે છે.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "આ ખુલ્લા ડેટાનો ઉપયોગ તમામ ભાષા ઉત્સાહિતો અને ટેકનોલોજિસ્ટ્સ દ્વારા વિશ્વસ્તરીય અવાજ પારખવાની એપ્લિકેશનો તૈયાર કરવા માટે થઇ શકે છે.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ભારતીય ભાષાઓમાં અવાજ પારખવાના ક્ષેત્રમાં ભારતને આત્મનિર્ભર બનવાની જરૂર છે. આથી, અમે સંખ્યાબંધ ભારતીય અવાજોનો મુક્ત ડેટા ભંડાર બનાવવા માંગીએ છીએ. આ રાષ્ટ્રીય ભાષા ભાષાંતર અભિયાન (એનએલટીએમ) અંતર્ગત ભારત સરકારના MeitYનો પ્રયાસ છે. આ પ્રયત્નને એકસ્ટેપ ફાઉન્ડેશનનું જાહેર હિતમાં સમર્થન પ્રાપ્ત છે અને તે વિવિધ અન્ય મુક્ત સ્રોત માળખાઓ સાથે <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> હેઠળ તેના મુક્ત સ્રોત કામગીરીનો લાભ પૂરો પાડે છે. ",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "બોલો ઇન્ડિયા આ પ્રયત્ન માટે તમને સ્વૈચ્છિક ભાગ લેવા અને તમારું યોગદાન આપવા આમંત્રિત કરે છે. તમારા સમગ્ર પ્રદાન ઉપર આપોઆપ પ્રક્રિયા હાથ ધરાશે અને સમુદાયને ઉપયોગી બની રહે તે રીતે મુક્ત ડેટા તરીકે ઉપલબ્ધ બનશે. આવો ડેટાનો ઉપયોગ ત્યારબાદ વિશ્વ સ્તરીય અવાજ ઓળખ એપ્લિકશન વિકસાવવા માટે તમામ ભાષા ઉત્સાહીઓ અને ટેક્નોલોજિસ્ટ દ્વારા કરી શકાય છે. ",
 	"India is a land of many languages, our digital strategy must reflect it.": "ભારત સંખ્યાબંધ ભાષાઓની ભૂમિ છે, આપણી ડિજિટલ વ્યૂહનીતિ તેને અવશ્યપણે પ્રતિબિંબિત કરવી જોઇએ.",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "90% ભારતીય વસ્તી તેમની દૈનિક પ્રવૃત્તિઓ કરવા માટે પ્રાદેશિક ભાષાનો ઉપયોગ કરે છે.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "આર્થિક, શૈક્ષણિક અને સામાજિક પ્રવૃત્તિઓ, ડિજિટલ માટે વધુને વધુ લોકો ડિજિટલ પ્લેટફોર્મનો ઉપયોગ કરે છે માટે, ડિજિટલ પ્લેટફોર્મ્સ અવશ્યપણે ભારતીય ભાષાઓ પર અવિરત કામ કરે.",
@@ -172,5 +172,8 @@
 	"ABOUT THE ORGANISATION": "સંગઠન વિશે",
 	"EkStep Foundation": "એસક્ટેપ ફાઉન્ડેશન",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "એસક્ટેપ ફાઉન્ડેશન ભાગીદારોને આકર્ષિત કરે છે અને સમાજના જટિલ કોયડાઓનો ઉકેલ લાવવા માટે મોટા પાયે ઓપન ઇન્ફ્રાસ્ટ્રક્ચર, ટૂલ્સ અને ફ્રેમવર્ક સર્જે છે. અમે આમ કરવા માટે ઓપન સોર્સ ડિઝિટલ ઇન્ફ્રાસ્ટ્રક્ચરનો વિકાસ કરીને Sunbird તરીકે ઓળખાતા ઇન્ફ્રાસ્ટ્રક્ચરનું સર્જન કર્યું છે અને સોસાઇટલ પ્લેટફોર્મ અપ્રોચ તરીકે ઓળખાતી વિચારસરણી અને કાર્યઢબનું અનુસરણ કરીએ છીએ",
-	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "એસક્ટેપ એક બિન-નફાકારી સંસ્થા છે, જે રોહિણી અને નંદન નિલેકણી અને શંકર મારુવાડા દ્વારા સ્થાપવામાં આવી છે."
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "એસક્ટેપ એક બિન-નફાકારી સંસ્થા છે, જે રોહિણી અને નંદન નિલેકણી અને શંકર મારુવાડા દ્વારા સ્થાપવામાં આવી છે.",
+	"National Language Translation Mission": "રાષ્ટ્રીય ભાષા ભાષાંતર અભિયાન",
+	"Badge ID": "બેજ આઇડી",
+	"Download": "ડાઉનલોડ કરો"
 }
