| Priyanshu | added additional content for Bengali

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -41,13 +41,13 @@
 	"Feedback": "ফীডব্যাক",
 	"Show All": "সবকটি দেখান",
 	"Select the language for contribution": "অবদানের জন্য ভাষা নির্বাচন করুন",
-	"Select the language for voluntary contribution": "অবদানের জন্য ভাষা নির্বাচন করুন",
+	"Select the language for voluntary contribution": "স্বেচ্ছাসেবী অবদানের জন্য ভাষা নির্বাচন করুন",
 	"Say": "বলুন",
 	"Speak": "বলুন",
 	"Contribute Your Voice": "আপনার স্বর অবদান রাখুন",
 	"Contribute your voice to create an open data repository of Indian languages": "ভারতীয় ভাষায় ওপেন ডেটা ভান্ডার তৈরি করতে আপনার স্বরের অবদান রাখুন",
-	"Listen": "শুনুন",
-	"Validate What They Say": "তারা যা বলে তা যাচাই করুন",
+	"Listen": "নিশ্চিত করুন",
+	"Validate What They Say": "যা লেখা আছে, তাই বলছে কি",
 	"Help us by validating the recordings that others have contributed": "অন্যেরা যে অবদান রেখেছে তাদের স্বর নমুনাগুলি যাচাই করে আমাদের সহায়তা করুন",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "বোলো ইন্ডিয়া: ভারতীয় ভাষাগুলির জন্য ক্রাউডসোর্সিং-এর উদ্যোগ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ভারতীয় ভাষায় বাচন শনাক্তকরণের ক্ষেত্রে আত্মনির্ভর হওয়া প্রয়োজন। তাই, আমরা অনেক ভারতীয় স্বরের ওপেন ডেটা ভান্ডার তৈরি করতে চাই। এই কারণের জন্য বোলো ইন্ডিয়া আপনার স্বরের অবদান রাখার জন্য আপনাকে আমন্ত্রণ জানায়।",
@@ -104,8 +104,8 @@
 	"Playing": "শুরু হয়েছে",
 	"Test Mic": "মাইক পরীক্ষা করুন",
 	"Test Speakers": "স্পিকার পরীক্ষা করুন",
-	"Please speak clearly": "Please speak clearly",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Please speak clearly": "পরিষ্কার করে বলুন",
+	"Low/No Background Noise": "নেপথ্যে কোলাহল নেই/কম",
 	"Background Noise Detected": "নেপথ্যে গোলমাল শোনা গেছে",
 	"------report-----": "------report-----",
 	"Report": "রিপোর্ট করুন",
@@ -245,10 +245,10 @@
 	"Congratulations!!! You have completed this batch of sentences": "অভিনন্দন!!! আপনি বাক্যের এই ব্যাচ সম্পূর্ণ করেছেন",
 	"social sharing text with rank": "আমি http://boloindia.nplt.in তে ভারতের জন্য ওপেন ভাষা ভাণ্ডার তৈরি করতে অবদান রেখেছি। আপনি ও আমি মিলে আমাদের স্বরের অবদান রেখে আমাদের ভাষাকে মেশিনে বুঝতে সাহায্য করার জন্য অনেক তফাৎ তৈরি করতে পারি। \"বোলো ইন্ডিয়া\" তে আমাদের %language ভাষার র‌্যাঙ্ক %rank আছে। আপনার ভাষাকে ক্ষমতায়ন করতে অবদান করতে চান?",
 	"social sharing text without rank": "আমি http://boloindia.nplt.in তে ভারতের জন্য ওপেন ভাষা ভাণ্ডার তৈরি করতে অবদান রেখেছি। আপনি ও আমি মিলে আমাদের স্বরের অবদান রেখে আমাদের ভাষাকে মেশিনে বুঝতে সাহায্য করার জন্য অনেক তফাৎ তৈরি করতে পারি। আপনার ভাষাকে ক্ষমতায়ন করতে অবদান করতে চান?",
-	"Subject": "বিষয়",
-	"Description": "বর্ণনা",
+	"Subject": "বিষয়",
+	"Description": "বিবরণ",
 	"Please type here...": "এখানে টাইপ করুন ...",
-	"Failed to submit the feedback. Please try again.": "প্রতিক্রিয়া জমা দিতে ব্যর্থ। অনুগ্রহপূর্বক আবার চেষ্টা করুন.",
+	"Failed to submit the feedback. Please try again.": "পফীডব্যাক জমা করতে ব্যর্থ। আবার চেষ্টা করুন।",
 	"Thank You for your valuable feedback": "আপনার মূল্যবান ফীডব্যাকের জন্য ধন্যবাদ",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "আপনার ফীডব্যাক আমাদের বলো ভারতকে প্রাসঙ্গিক রাখতে সাহায্য করে, ফীডব্যাক জানাতে সময় দেওয়ার জন্য আমরা প্রশংসা করি।",
 	"Back to Home": "হোমপেজ-এ ফিরে যান",
@@ -259,8 +259,8 @@
 	"Would you also like to contribute your voice?": "আপনি কি নিজের স্বরে অবদান রাখতে চান?",
 	"Select a language": "একটি ভাষা নির্বাচন করুন",
 	"Gender Distribution": "লিঙ্গ বিতরণ",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ভারতীয় ভাষাসমূহে বাচন শনাক্তকরণের ক্ষেত্রে আত্মনির্ভর হওয়া চাই। তাই, আমাদের অনেক ভারতীয় স্বরে ওপেন ডেটা ভাণ্ডার তৈরি করা চাই। সেই কারণে আপনার স্বর স্বেচ্ছায় অবদানের জন্য \"বোলো ইন্ডিয়া\" আপনাকে আমন্ত্রণ জানায়।",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "এই ওপেন ডেটা ভাষা ও প্রযুক্তিতে আগ্রহী ব্যক্তিগণ বিশ্বস্তরীয় বাচন শনাক্তকরণ অ্যাপ্লিকেশন তৈরি করতে ব্যবহার করতে পারেন।",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ভারতীয় ভাষাসমূহে বাচন শনাক্তকরণের ক্ষেত্রে আত্মনির্ভর হওয়া চাই। তাই, আমাদের অনেক ভারতীয় স্বরে ওপেন ডেটা ভাণ্ডার তৈরি করা চাই। রাষ্ট্রীয় ভাষা অনুবাদ মিশনের (এনএলটিএম) অধীনে ভারত সরকারের মেইটি দ্বারা একটি প্রয়াস। এই প্রয়াসটি একস্টেপ ফাউন্ডেশন একটি জনহিতের ভিত্তিতে সমর্থন করে এবং এটি বিভিন্ন ওপেন সোর্স ফ্রেমওয়ার্ক সহ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> এর অধীনে ওপেন সোর্স কাজটি উদ্দেশ্যসাধনের সুবিধায় কাজ করে।",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "সেই উদ্দেশ্যের জন্য আপনার স্বরের অবদান এবং স্বেচ্ছাসেবীর জন্য বোলো ইন্ডিয়া আপনাকে আমন্ত্রণ জানায়। আপনার সমস্ত অবদানগুলি স্বয়ংক্রিয়ভাবে প্রক্রিয়াজাত হয় এবং সমাজের কাছে উপযোগী ফ্যাশনে ওপেন ডেটা হিসেবে উপলব্ধ করায়। এই ধরনের ডেটা ভাষা ও প্রযুক্তিতে আগ্রহী ব্যক্তিগণ বিশ্বস্তরীয় বাচন শনাক্তকরণ অ্যাপ্লিকেশন তৈরির জন্য ব্যবহার করতে পারেন।",
 	"India is a land of many languages, our digital strategy must reflect it.": "ভারত হল বহু ভাষার দেশ, আমাদের ডিজিট্যাল কৌশলে এর প্রভাব হওয়া চাই",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "ভারতের 90% জনগণ তাদের দৈনন্দিন কাজকর্মের জন্য আঞ্চলিক ভাষা ব্যবহার করে।",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "যেভাবে আরও বেশি সংখ্যক লোক আর্থিক, শিক্ষামূলক এবং সামাজিক ক্রিয়াকলাপের জন্য ডিজিট্যাল প্ল্যাটফর্মগুলি ব্যবহার করছে, ডিজিট্যাল প্ল্যাটফর্মগুলি অবশ্যই ভারতীয় ভাষাগুলিতে নির্বিঘ্নে কাজ করবে।",
@@ -269,5 +269,8 @@
 	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "আপনার ভাষায় বিকাশের প্রস্তাবিত টুল, ইউটিলিটি এবং মডেলগুলি বোলো ইন্ডিয়া ক্রাউড সোর্সিং প্ল্যাটফর্মের মাধ্যমে মুক্ত উৎসের অবদানের উপর নির্ভর করবে",
 	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "বাচন শনাক্তকরণ \"মেশিন-লার্নিং\" প্রযুক্তির উপর নির্ভর করে যার জন্য বিশাল ডেটাসেটের প্রয়োজন যাতে বিবিধ ভারতীয় স্বর এবং সংশ্লিষ্ট পাঠ্যের অন্তর্ভুক্ত। বোলো ইন্ডিয়া-এর মাধ্যমে আমরা ভারতীয় ভাষায় কথা বলার জন্য ভারতীয় স্বরের এক বিভিন্ন ওপেন ভাণ্ডার তৈরি করতে চাই, যার ব্যবহার এই কর্মোদ্যোগের জন্য করা যেতে পারে।",
 	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "আমরা আপনাকে যোগদান করতে এবং এই উদ্যোগটিতে আপনার স্বর অবদান রাখতে আমন্ত্রণ জানাচ্ছি। এক নাগাড়ে আপনার স্বর রেকর্ডিং অপ্রতিরোধ্য হতে পারে এবং তাই আপনি আমাদের সাথে একাধিকবার দেখা করতে পারেন এবং আপনি যেখান থেকে চলে গিয়েছিলেন সেখান থেকে শুরু করার জন্য আমরা আমাদের ওয়েবসাইটের ব্যবস্থা তৈরি করেছি।",
-	"START CONTRIBUTING": "অবদান শুরু করুন"
+	"START CONTRIBUTING": "অবদান শুরু করুন",
+	"National Language Translation Mission": "রাষ্ট্রীয় ভাষা অনুবাদ মিশন",
+	"Badge ID": "ব্যাজ পরিচয়পত্র",
+	"Download": "ডাউনলোড"
 }
